k8s/grafana-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
spec:
  type: LoadBalancer
  selector:
    app: grafana
  ports:
    - name: http
      port: 80
      targetPort: 3000
